--- a/project2/index.html
+++ b/project2/index.html
@@ -6,4 +6,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title></title>
+<title>Life Decisions</title>
+
+
+<a href="question1.html"><img src="enter.png">
