--- a/project21/safari.html
+++ b/project21/safari.html
@@ -3,24 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safari App</title>
+    <title>Safari Challenge</title>
 </head>
 <body>
 
+<img src="thunderbird.png" style="width: 400px; height: 400px;">
+
 <div>
-    <a href="index.html">
-        <img src="safari-icon.png" alt="Safari" style="width: 50px; height: 50px;">
-    </a>
     <button onclick="location.href='index.html'">Back</button>
-    <div>
-        <input type="text" value="www.6m1r.github.io/project21">
-    </div>
-    <div>
-        <h2>Welcome to Safari!</h2>
-        <p>You're browsing the web. This is a simulation of the Safari app.</p>
-        <p>Click the "Back" button to return to your home screen.</p>
-    </div>
+    <h2>Safari Challenge</h2>
+    <p>What color is the St. John's Mascot?</p>
+    <input type="text" id="safari-answer" placeholder="Your answer">
+    <button onclick="checkSafariAnswer()">Submit</button>
+    <p id="safari-result"></p>
 </div>
+
+<script>
+function checkSafariAnswer() {
+    var answer = document.getElementById('safari-answer').value.toLowerCase();
+    if (answer === 'red'){
+        document.getElementById('safari-result').innerText = "Correct! You can go to Maps.";
+        setTimeout(function() {
+            location.href = 'maps.html';
+        }, 2000);
+    } else {
+        document.getElementById('safari-result').innerText = "Incorrect! Try again.";
+    }
+}
+</script>
 
 </body>
 </html>
