--- a/project21/index.html
+++ b/project21/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escape the iphone (St. John's Edition)</title>
 </head>
-<strong>ESCAPE THE IPHONE (ST. JOHNS EDITION) P.S. START WITH IMESSAGE FIRST!</strong> <div style="position: relative; width: 330px; height: 630px;">
+<strong>ESCAPE THE IPHONE (ST. JOHNS EDITION) P.S. START WITH IMESSAGE FIRST! Once a question is answered correctly the next one will show by itself : </strong> <div style="position: relative; width: 330px; height: 630px;">
 <body>
 
 <!-- iPhone Frame -->
