--- a/project21/index.html
+++ b/project21/index.html
@@ -10,7 +10,7 @@
 
 <!-- iPhone Frame -->
 <div style="position: relative; width: 300px; height: 600px;">
-    <img src="iphone-frame.png" alt="iPhone Frame" style="width: 100%; height: 100%;">
+    <img src="iphone-frame1.png" alt="iPhone Frame" style="width: 100%; height: 100%;">
 
     <!-- App Icons with Positioning -->
     <a href="messages.html" style="position: absolute; top: 100px; left: 30px;">
