--- a/div/index.html
+++ b/div/index.html
@@ -4,96 +4,173 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ezo Kitchen</title>
-    <link rel="stylesheet" href="divstyles.css">
+    <style>
+        /* Base styling for body */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: black; /* Black background for the body */
+            color: white; /* White text */
+        }
+
+        /* Navbar styling */
+        .navbar {
+            display: flex;
+            align-items: center;
+            padding: 0 20px;
+            background-image: url('texture.jpg'); /* Wood texture background */
+            background-size: cover;
+            background-repeat: no-repeat;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            height: 60px;
+        }
+
+        /* Logo styling */
+        .navbar img.logo {
+            height: 50px;
+            margin-right: auto;
+        }
+
+        /* Navbar links */
+        .navbar a {
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .navbar a:hover {
+            background-color: rgba(255, 255, 255, 0.3); /* Light overlay on hover */
+            color: white;
+        }
+
+        /* Add top margin to avoid overlap with navbar */
+        .content {
+            margin-top: 70px;
+            padding: 20px;
+        }
+
+        /* Responsive image styling */
+        .content img {
+            width: 100%;
+            height: auto;
+            max-width: 100%;
+        }
+
+        /* Background image container */
+        .background-image-container {
+            background-color: black; /* Fallback for transparency */
+            background-size: cover;
+            background-position: center;
+            height: 600px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 60px;
+            text-align: center;
+        }
+
+        /* Link styling within background sections */
+        .background-image-container h1 a {
+            color: white;
+            text-decoration: none;
+            font-size: 36px;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Shadow for readability */
+        }
+
+        .background-image-container h1 a:hover {
+            color: lightblue; /* Hover color */
+        }
+
+        /* Centered content section */
+        .text-center {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        /* Text module styling */
+        .text-module {
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: left;
+            color: white;
+        }
+
+        .text-module h2 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .text-module p {
+            font-size: 16px;
+            line-height: 1.5;
+        }
+
+        /* Button styling */
+        .menu-button {
+            display: inline-block;
+            background-color: white; /* White background */
+            color: black; /* Black text */
+            padding: 10px 20px;
+            text-align: center;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 10px;
+            transition: background-color 0.3s ease;
+        }
+
+        .menu-button:hover {
+            background-color: #ddd; /* Light gray on hover */
+        }
+    </style>
 </head>
 <body>
 
-    <!-- Nav Bar -->
+    <!-- Navbar with clickable logo -->
+    <div class="navbar">
+        <a href="index.html">
+            <img src="ezologo.png" alt="Ezo Kitchen Logo" class="logo">
+        </a>
+        <a href="about.html">About</a>
+        <a href="reservation.html">Reservation</a>
+        <a href="lunch.html">Menu</a>
+    </div>
 
-<div class="navbar">
-<div class=logo><img src="ezologo.png" width="30%" height="100">
+    <!-- Main Content -->
+    <div class="content">
+        <!-- North Hempstead Section -->
+        <div class="background-image-container" style="background-image: url('hempstead.png');">
+            <h1><a href="hempstead.html">North Hempstead</a></h1>
+        </div>
 
-<ul>
-    <li><a>about</a></li>
-    <li><a>reservation</a></li>
-    <li><a>menu</a></li>  
-</ul>
-</div>
+        <!-- Intro text -->
+        <div class="text-center">
+            <p>Experience a diverse and modern Asian menu while enjoying a sleek, fashionable ambiance.</p>
+        </div>
 
-<!-- Hero Section -->
-    <h1>Taste the East! Ezo Kitchen</h1>
+        <!-- Menu Section -->
+        <div class="text-module">
+            <h2>Our Menus</h2>
+            <div class="image">
+                <img src="menupic.png" alt="Menu Image">
+                <p>We offer a cuisine that is predominantly Japanese with Chinese elements and touches of Thai.</p>
+                <!-- Menu Button -->
+                <a href="lunch.html" class="menu-button">View Full Menu</a>
+            </div>
+        </div>
 
-
-<!-- Content -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>North Hempstead Image</title>
-
-<table background="hempstead.png" width="183%" height="450">
-  <tr>
-    <td align="center" align="middle">
-      <div class="background-image-container">
-  <h1><a href="link.html">North Hempstead</a></h1>
-</div>
-
-</body>
-</html>
-
-</head>
-<body>
-    </td>
-  </tr>
-</table>
-
-</body>
-</html>
-
-    <div class="text-module">
-        <h2>Our Menus</h2>
-
-        <div class="content">
-    <div class="image">
-        <img src="menupic.png" alt="st johnny" align="left">
-
-        <body>We offer a cuisine that is predominantly Japanese with Chinese elements and touches of Thai</body>
-        <p></p>
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<body>
-<table width="400%" height="100" background="privatedining.png" 
-  <tr>
-    <td align="center" valign="middle">
-      <div class="background-image-container">
-  <h1><a href="link.html">Private Dining & Catering</a></h1>
-  <tr>
-    <td></td> <!-- Top-left cell -->
-    <td></td> <!-- Top-right cell -->
-  </tr>
-  <tr>
-    <td></td> <!-- Bottom-left cell -->
-    <td align="right" valign="bottom"> <!-- Bottom-right cell -->
-      <h1>about</h1>
-      <h1>careers</h1>
-      <h1>contact</h1>
-    </td>
-  </tr>
-</table>
+        <!-- Private Dining Section -->
+        <div class="background-image-container" style="background-image: url('privatedining.png');">
+            <h1><a href="privatedining.html">Private Dining & Catering</a></h1>
+        </div>
+    </div>
 
 </body>
 </html>
-
-
-
-
-
-
-
