--- a/div/about.html
+++ b/div/about.html
@@ -10,6 +10,8 @@
         <img src="ezologo.png" alt="Logo" class="logo">
         <a href="reservation.html">Reservation</a>
         <a href="lunch.html">Menu</a>
+         <a href="careers.html">Careers</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div class="content">
     </div>
@@ -24,6 +26,8 @@
     </a>
     <a href="reservation.html">Reservation</a>
     <a href="lunch.html">Menu</a>
+     <a href="careers.html">Careers</a>
+        <a href="contact.html">Contact</a>
 </div>
 
 <!DOCTYPE html>
@@ -193,8 +197,11 @@
         <a href="index.html">
             <img src="ezologo.png" alt="Ezo Kitchen Logo" class="logo">
         </a>
+         <a href="about.html">About</a>
         <a href="reservation.html">Reservation</a>
         <a href="lunch.html">Menu</a>
+         <a href="careers.html">Careers</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <!-- Introduction Section -->
