--- a/div/dessert.html
+++ b/div/dessert.html
@@ -130,6 +130,9 @@
         </a>
         <a href="about.html">About</a>
         <a href="reservation.html">Reservation</a>
+                <a href="lunch.html">Menu</a>
+         <a href="careers.html">Careers</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <!-- Buttons for Lunch, Dinner, Dessert, Drinks -->
