--- a/div/drinks.html
+++ b/div/drinks.html
@@ -130,6 +130,9 @@
         </a>
         <a href="about.html">About</a>
         <a href="reservation.html">Reservation</a>
+                <a href="lunch.html">Menu</a>
+         <a href="careers.html">Careers</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <!-- Buttons for Lunch, Dinner, Dessert, Drinks -->
@@ -138,6 +141,7 @@
         <a href="dinner.html">Dinner</a>
         <a href="dessert.html">Dessert</a>
         <a href="drinks.html">Drinks</a>
+
     </div>
 
     <!-- Main Content Section -->
