--- a/div/privatedining.html
+++ b/div/privatedining.html
@@ -117,6 +117,8 @@
         <a href="about.html">About</a>
         <a href="reservation.html">Reservation</a>
         <a href="lunch.html">Menu</a>
+         <a href="careers.html">Careers</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <!-- Reservation Form Section -->
